tests/expectations/parser/type_/signature_verify_bad_syntax_fail.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found '('
    --> test:4:39
     |
   4 |         let a: bool = signature.verify(s, a, v);
     |                                       ^
